--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
     <head>
         <!-- Spécifie l'encodage des caractères en UTF-8 -->
@@ -30,7 +30,7 @@
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
                     <a href="#accueil" class="header-logo">
-                        <img src="img/portfolio-logo.png">
+                        <img src="img/portfolio-logo.png" alt="">
                     </a>
                     <!-- Menu de navigation principal -->
                     <ul class="header-menu">
