--- a/veille technologique.html
+++ b/veille technologique.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
     <head>
         <!-- Spécifie l'encodage des caractères en UTF-8 -->
@@ -11,11 +11,11 @@
         <!-- icon de la page -->
         <link rel="shortcut icon" type="png" href="img/portfolio-logo-64.png" />
         <!-- Balise de description pour le SEO -->
-        <meta type="description" content="Ceci est mon portfolio étudiant" />
+        <meta name="description" content="Ceci est mon portfolio étudiant" />
         <!-- Lien vers la police Material Symbols pour les icônes -->
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
         <!-- Lien vers la feuille de style CSS du portfolio -->
-        <link rel="stylesheet" href="styles/styles.css" types="text/css">
+        <link rel="stylesheet" href="styles/styles.css" type="text/css">
     </head>
 
     <body>
@@ -29,7 +29,7 @@
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
                     <a href="index.html" class="header-logo">
-                        <img src="img/portfolio-logo.png">
+                        <img src="img/portfolio-logo.png" alt="Logo du portfolio">
                     </a>
                     <!-- Menu de navigation principal -->
                     <ul class="header-menu">
@@ -43,17 +43,17 @@
 
         <!-- Section d'accueil avec image de fond et texte -->
         <div id="accueil" class="slider">
-            <img src="img/slider.jpg" class="slider-background">
+            <img src="img/slider.jpg" class="slider-background" alt="Image de fond">
             <div class="slider-content">
                 <h1>Rosa Axel</h1>
                 <p>Etudiant en BTS SIO</p>
             </div>
         </div>
 
-        <!-- Section 'veille-technologique'avec texte descriptif -->
+        <!-- Section 'veille technologique' avec texte descriptif -->
         <div id="veille-technologique" class="section">
             <div class="boxed text-center">
-                <h2>Qu'est ce qu'une veille technologique?</h2>
+                <h2>Qu'est-ce qu'une veille technologique ?</h2>
                 <div class="flex" style="justify-content: center">
                     <div class="w60 wm100 veille-txt">
                         <p>
@@ -67,7 +67,7 @@
             </div>
         </div>
 
-        <div id="veille-technologique" class="section dark">
+        <div id="" class="section dark">
             <div class="boxed text-center">
                 <h2>Les Types de source utilisés</h2>
                 <div class="flex" style="justify-content: center;">
@@ -86,13 +86,13 @@
             </div>
         </div>
 
-        <div id="veille-technologique" class="section">
+        <div id="" class="section">
             <div class="boxed text-center">
                 <h2>Ma Veille Technologique</h2>
                 <div class="flex " style="justify-content: center;">
                     <div class="w60 wm100 veille-txt" style="text-align: left;">
                         <p>
-                            Pour ma Veille Technologique, j'ai choisi "L’Intelligence Artificielle au Service du Développement"
+                            Pour ma Veille Technologique, j'ai choisi "L’Intelligence Artificielle au Service du Développement."
                         </p>
                         <p style="margin-top: 40px;">
                             <strong>Présentation :</strong><br><br>
@@ -100,17 +100,18 @@
                         </p>
                         <p style="margin-top: 40px;">
                             <strong>Méthodes et outils utilisés :</strong><br><br>
-                            Pour me permettre de rester à jour sur ma Veille Technologique j'ai mis en place des outils et des méthodes pour cela.  
+                            Pour me permettre de rester à jour sur ma Veille Technologique, j'ai mis en place des outils et des méthodes pour cela.
                         </p>
                         <p style="margin-top: 40px;">
-                            La première methode que j'ai mis en place est l'utilisation d'un Pindboard sur le navigateur que j'utilise. En effet sur OperaGX je peux utiliser cette fonctionnalités qui me permet de stoker tout les sites,blog et/ou article que je trouverai.<br><br>
-                            <img src="img/Pindboards.png" class="small-image">
+                            La première méthode que j'ai mise en place est l'utilisation d'un Pindboard sur le navigateur que j'utilise.
+                            En effet, sur OperaGX je peux utiliser cette fonctionnalité qui me permet de stocker tous les sites, blogs et/ou articles que je trouverai.<br><br>
+                            <img src="img/Pindboards.png" alt="" class="small-image" >
                         </p>
                         <p style="margin-top: 40px;">
-                            J’ai ensuite rajouté un autre système de veille , le « Google Alert » , c’est une alerte Google qui est un email envoyé par Google listant toutes les pages web qui ont mentionné le mot ou l’expression sur laquelle vous avez placé une alerte.<br><br>
-                            <img src="img/Google-alert.png" class="small-image"><br><br>
-                            Grace a Google alert je vais pouvoir remplir mon Pindboard,c'est deux outils de veille ce complet a merveille.<br><br>
-                            Je metterai plus tard en place un flux RSS grace a Feedly et je centraliserai les informations avec ce dernier aussi.
+                            J’ai ensuite rajouté un autre système de veille, le « Google Alerts », c’est une alerte Google qui est un email envoyé par Google listant toutes les pages web qui ont mentionné le mot ou l’expression sur laquelle vous avez placé une alerte.<br><br>
+                            <img src="img/Google-alert.png" alt="" class="small-image"><br><br>
+                            Grace a Google alerts je vais pouvoir remplir mon Pindboard,c'est deux outils de veille ce complet a merveille.<br><br>
+                            Je mettrai plus tard en place un flux RSS grâce à Feedly et je centraliserai les informations avec ce dernier aussi.
                         </p>
                     </div>
                 </div>
@@ -119,29 +120,29 @@
 
         <div class="color-band"></div>
 
-        <div id="veille-technologique" class="section">
+        <div id="" class="section">
             <div class="boxed text-center">
-                <h2>Les Résulats Obtenue</h2>
+                <h2>Les Résultats Obtenue</h2>
                 <div class="flex" style="justify-content: center;">
                     <div class="w60 wm100 veille-txt" style="text-align: left;">
                         <ul style="padding-left: 80px;">
-                            Vous pouvez voir sur l'image ci-dessous une partie des articles que Google Alert m'envoie. Bien que ici, comme le tag est "IA", je vais devoir faire un tri manuel.
+                            Vous pouvez voir sur l'image ci-dessous une partie des articles que Google Alerts m'envoie. Bien que ici, comme le tag est "IA", je vais devoir faire un tri manuel.
                             Une fois ce tri fait, je mettrai dans mon Pindboard.<br><br>
-                            <img src="img/Capture d’écran alerte n°1.png" class="small-image"><br><br>
+                            <img src="img/Capture d’écran alerte n°1.png" alt="" class="small-image"><br><br>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div id="veille-technologique" class="section dark">
+        <div id="" class="section dark">
             <div class="boxed text-center">
-                <h2>Les Point Fort Veille Technologique</h2>
+                <h2>Les Points Fort Veille Technologique</h2>
                 <div class="flex" style="justify-content: center;">
                     <div class="w60 wm100 veille-txt" style="text-align: left;">
                         <ul style="padding-left: 80px;">
-                            <li>les informations sont quasiment tous utiles et de qualités</li>
-                            <li>le flux d’information est très élevé</li>
+                            <li>Les informations sont quasiment tous utiles et de qualités</li>
+                            <li>Le flux d’information est très élevé</li>
                             <li>Facile d’utilisation et rapide d’accès</li>
                         </ul>
                     </div>
@@ -149,13 +150,13 @@
             </div>
         </div>
 
-        <div id="veille-technologique" class="section">
+        <div id="" class="section">
             <div class="boxed text-center">
-                <h2>Les Point Faible Veille Technologique</h2>
+                <h2>Les Points Faible Veille Technologique</h2>
                 <div class="flex" style="justify-content: center;">
                     <div class="w60 wm100 veille-txt" style="text-align: left;">
                         <ul style="padding-left: 80px;">
-                            <li>Trop d’informations , difficiles de tout lire et surtout trié (surtout avec Google Alert)</li>
+                            <li>Trop d’informations, difficiles de tout lire et surtout trié (surtout avec Google Alerts)</li>
                             <li>Beaucoup d’informations se ressemblent et/ou sont identiques</li>
                         </ul>
                     </div>
@@ -188,9 +189,10 @@
         </div> 
         
         <div class="navigation-buttons">
-            <button onclick="location.href='index.html'">Hub</button>
             <button onclick="location.href='Tableau-de-synthèse.html'">Tableau de synthèse</button>
+            <button onclick="location.href='SLAM.html'">Compétences</button>
         </div>
+    </body>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
     <script src="js/app.js"></script>  
