--- a/Application-C.html
+++ b/Application-C.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
     <head>
         <!-- Spécifie l'encodage des caractères en UTF-8 -->
@@ -11,11 +11,11 @@
         <!-- icon de la page -->
         <link rel="shortcut icon" type="png" href="img/portfolio-logo-64.png" />
         <!-- Balise de description pour le SEO -->
-        <meta type="description" content="Ceci est mon portfolio étudiant" />
+        <meta name="description" content="Ceci est mon portfolio étudiant" />
         <!-- Lien vers la police Material Symbols pour les icônes -->
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
         <!-- Lien vers la feuille de style CSS du portfolio -->
-        <link rel="stylesheet" href="styles/styles.css" types="text/css">
+        <link rel="stylesheet" href="styles/styles.css" type="text/css">
     </head>
 
     <body>
@@ -29,7 +29,7 @@
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
                     <a href="index.html" class="header-logo">
-                        <img src="img/portfolio-logo.png">
+                        <img src="img/portfolio-logo.png" alt="Logo Portfolio">
                     </a>
                     <!-- Menu de navigation principal -->
                     <ul class="header-menu">
@@ -43,10 +43,10 @@
 
         <!-- Section d'accueil avec image de fond et texte -->
         <div id="accueil" class="slider">
-            <img src="img/slider.jpg" class="slider-background">
+            <img src="img/slider.jpg" class="slider-background" alt="Image de fond">
             <div class="slider-content">
                 <h1>Rosa Axel</h1>
-                <p>Etudiant en BTS SIO</p>
+                <p>Étudiant en BTS SIO</p>
             </div>
         </div>
 
@@ -57,7 +57,7 @@
                 <div class="flex" style="justify-content: center">
                     <div class="w60 wm100 portfolio-txt">
                         <p class="text-center">
-                            Vous pourrez decouvrir ici la rebrique dans la quelle je vais expliquer la réalisation d'une application calculatoire.<br><br>
+                            Vous pourrez découvrir ici la rubrique dans laquelle je vais expliquer la réalisation d'une application calculatoire.<br><br>
                         </p>
                         <p class="text-left">
                             La réalisation de cette application a été fait en C.
@@ -84,7 +84,7 @@
                     </div>
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined">account_box</span>
-                        <span class="label">Github</span>
+                        <span class="label">GitHub</span>
                         <a href="https://github.com/Roxas004"><span class="value">https://github.com/Roxas004</span></a>                        
                     </div>
                 </div>
@@ -95,6 +95,7 @@
             <button onclick="location.href='index.html'">Hub</button>
             <button onclick="location.href='Portfolio.html'">Projet 1</button>
         </div>
+    </body>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
     <script src="js/app.js"></script>  
