--- a/legolas.html
+++ b/legolas.html
@@ -112,9 +112,11 @@
                         </p>
                         <ul class="text-left missions">
                             <li>Product Context</li>
-                            <img src="img/Product%20Context.png" alt="Product Context Diagram" style="max-width: 100%; height: auto; margin: 10px 0;">
+                            <img src="img/Code/product%20context.png" alt="Product Context Diagram" style="max-width: 100%; height: auto; margin: 10px 0; cursor: zoom-in;">
                             <li>Project Progress</li>
+                            <img src="img/Code/product_progress.png" alt="Project Progress Diagram" style="max-width: 100%; height: auto; margin: 10px 0;">
                             <li>Technical Context</li>
+                            <img src="img/Code/technical_context.png" alt="Technical Context Diagram" style="max-width: 100%; height: auto; margin: 10px 0;">
                         </ul>
 
                         <p class="text-left">
