--- a/legolas.html
+++ b/legolas.html
@@ -56,7 +56,7 @@
                 <h2>Mon Stage en Entreprise</h2>
                 <div class="flex" style="justify-content: center">
                     <div class="w60 wm100 portfolio-txt">
-                        <p class="text-center">
+                        <p class="text-left">
                             J’ai réalisé mon stage de BTS SIO au sein de <strong>Ekino</strong>, une société spécialisée dans
                             la transformation digitale.
                         </p>
@@ -111,12 +111,18 @@
                             d'un projet, en utilisant l'IA Cline qui m'a aidé à créer trois fichiers importants pour le projet :
                         </p>
                         <ul class="text-left missions">
-                            <li>Product Context</li>
-                            <img src="img/Code/product%20context.png" alt="Product Context Diagram" style="max-width: 100%; height: auto; margin: 10px 0; cursor: zoom-in;">
-                            <li>Project Progress</li>
-                            <img src="img/Code/product_progress.png" alt="Project Progress Diagram" style="max-width: 100%; height: auto; margin: 10px 0;">
-                            <li>Technical Context</li>
-                            <img src="img/Code/technical_context.png" alt="Technical Context Diagram" style="max-width: 100%; height: auto; margin: 10px 0;">
+                            <li>Product Context:</li>
+                            <a href="img/Code/product%20context.png" target="_blank">
+                                <img src="img/Code/product%20context.png" alt="Product Context Diagram" class="image-code">
+                            </a>
+                            <li>Project Progress:</li>
+                            <a href="img/Code/product%20context.png" target="_blank">
+                                <img src="img/Code/product_progress.png" alt="Product progress Diagram" class="image-code">
+                            </a>
+                            <li>Technical Context:</li>
+                            <a href="img/Code/product%20context.png" target="_blank">
+                                <img src="img/Code/technical_context.png" alt="Technical Context Diagram" class="image-code">
+                            </a>
                         </ul>
 
                         <p class="text-left">
