--- a/legolas.html
+++ b/legolas.html
@@ -69,8 +69,8 @@
                         <h3 class="text-left">Mes missions</h3>
                         <ul class="text-left missions">
                             <li><span class="material-symbols-outlined">code</span> Conception et mise en place du projet en Symfony / PHP </li>
-                            <li><span class="material-symbols-outlined">storage</span> Conception et administration des bases de données avec PostgreSQL</li>
-                            <li><span class="material-symbols-outlined">description</span> Rédaction de documentation technique</li>
+                            <li><span class="material-symbols-outlined">Storage</span> Conception et administration des bases de données avec PostgreSQL</li>
+                            <li><span class="material-symbols-outlined">Description</span> Rédaction de documentation technique</li>
                         </ul><br>
 
                         <h3 class="text-left">Compétences acquises</h3><br>
@@ -102,13 +102,16 @@
                 <div class="flex" style="justify-content: center">
                     <div class="w60 wm100 portfolio-txt">
                         <p class="text-left">
-                            Ce stage avait pour but de me faire réaliser un projet de <strong>A à Z</strong>, en partant de la <strong>conception</strong> jusqu'à la <strong>
-                            mise en production</strong>, en m'appuyant sur les nouvelles technologies telles que l'<strong>IA</strong>.
+                            Ce stage avait pour but de me faire réaliser un projet de <strong>A à Z</strong>,
+                            de la <strong>conception</strong> à la <strong>mise en production</strong>,
+                            en m’appuyant sur les nouvelles technologies, notamment l’<strong>IA</strong>.
                         </p>
 
                         <p class="text-left">
-                            Avant même de commencer à coder, j'ai dû apprendre à réaliser tout le travail de <strong>conception</strong> et de <strong>planification</strong>
-                            d'un projet, en utilisant l'IA Cline qui m'a aidé à créer trois fichiers importants pour le projet :
+                            Avant même de commencer à coder, j'ai dû apprendre à réaliser tout le travail de <strong>conception</strong> et
+                            de <strong>planification</strong> d'un projet, en utilisant l'IA <strong>Cline</strong>,
+                            qui m'a aidé à créer trois fichiers essentiels pour le projet :
+
                         </p>
                         <ul class="text-left missions">
                             <li>Product Context:</li>
@@ -127,7 +130,7 @@
 
                         <p class="text-left">
                             Ces documents permettent de définir clairement les <strong>objectifs</strong> et le <strong>contexte</strong> technique du projet,
-                            ce qui permet que lorsque l'on utilise une <strong>IA</strong> de lui donner ces fichiers pour quelles est tout le <strong>contexte</strong> d'un coup.
+                            afin que, lorsqu’on utilise une <strong>IA</strong>, on puisse lui fournir ces fichiers pour qu’elle ait immédiatement tout le <strong>contexte</strong>.
                         </p>
                     </div>
                 </div>
